# hocker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.nix  default.nix  hocker.cabal  release.nix  shell.nix  stack.yaml
.github/workflows/: ci.yml
docker2nix/: Main.hs  README.md
hocker-config/: Main.hs  README.md
hocker-image/: Main.hs  README.md
hocker-layer/: Main.hs  README.md
hocker-manifest/: Main.hs  README.md
nix/: 17_09.nix  18_09.nix  ChasingBottoms.nix  Diff.nix  RSA.nix  assoc.nix  cassava.nix  cborg.nix  comonad.nix  constraints.nix  contravariant-extras.nix  cryptohash-sha256.nix  cryptohash-sha512.nix  distributive.nix  doctest.nix  fetchNixpkgs.nix  haskell-src-exts.nix  haskell-src-meta.nix  hedgehog.nix  hnix.nix  http-client-tls.nix  http-client.nix  language-haskell-extract.nix  lens-aeson.nix  lens-family-th.nix  lens.nix  lifted-async.nix  memory.nix  microstache.nix  nix-paths.nix  optparse-generic.nix  pkgs.nix  repline.nix  saltine.nix  semigroupoids.nix  serialise.nix  shell.nix  tasty-hedgehog.nix  th-expand-syns.nix  tls.nix  (+5 more)
nix/overlays/: haskell-packages.nix
src/: Lib.hs  Types.hs
src/Data/Docker/: Nix.hs
src/Data/Docker/Image/: AesonHelpers.hs  Types.hs
src/Data/Docker/Image/V1/: Layer.hs  Types.hs
src/Data/Docker/Image/V1_2/: Types.hs
src/Data/Docker/Nix/: FetchDocker.hs  Lib.hs
src/Hocker/: Lib.hs  Types.hs
src/Hocker/Types/: Exceptions.hs  Hash.hs  ImageName.hs  ImageTag.hs  URI.hs
src/Network/Wreq/: ErrorHandling.hs
src/Network/Wreq/Docker/: Image.hs  Registry.hs
src/Network/Wreq/Docker/Image/: Lib.hs  V1_2.hs
src/Network/Wreq/Docker/Registry/: V2.hs
src/Types/: Exceptions.hs  Hash.hs  ImageName.hs  ImageTag.hs  URI.hs
test/: Main.hs
test/Tests/Data/Docker/: Image.hs
test/Tests/Data/Docker/Image/: V1.hs  V1_2.hs
test/Tests/Data/Docker/Nix/: FetchDocker.hs
test/data/: golden-debian:jessie.nix  golden-debian_jessie.nix  manifest-debian:jessie.json
