name:                hocker
version:             1.0.3
synopsis:            Interact with the docker registry and generate nix build instructions
homepage:            https://github.com/awakesecurity/hocker#readme
Bug-Reports:         https://github.com/awakesecurity/hocker/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Awake Security
maintainer:          opensource@awakesecurity.com
copyright:           2016 Awake Security
category:            Utilities
build-type:          Simple

cabal-version:       >=1.10
Tested-With:         GHC == 8.0.2
Description:
    @hocker@ is a suite of command line utilities and a library for:
    .
    * fetching a docker image
    * fetching a layer of an image
    * fetching an image's configuration
    * fetching a docker registry image manifest
    * generating nix build instructions from a registry image manifest
    .
    The motivation for this tool came from a need to fetch docker
    image artifacts from a docker registry without the stock docker
    tooling that is designed to only work with the docker daemon.
    .
    These tools /only/ work with version 2 of the docker registry and
    docker version (>=) 1.10.
    .
    For a complete set of usage examples please see the project's <https://github.com/awakesecurity/hocker#readme README.md>.

extra-source-files:
  LICENSE
  README.md
  CHANGELOG.md

data-dir:
  test/data

source-repository head
  type:     git
  location: https://github.com/awakesecurity/hocker.git

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
                  Data.Docker.Image.AesonHelpers,
                  Data.Docker.Image.Types,
                  Data.Docker.Nix,
                  Data.Docker.Nix.FetchDocker,
                  Data.Docker.Nix.Lib,
                  Hocker.Lib,
                  Hocker.Types,
                  Hocker.Types.Exceptions,
                  Hocker.Types.Hash,
                  Hocker.Types.ImageName,
                  Hocker.Types.ImageTag,
                  Hocker.Types.URI,
                  Network.Wreq.Docker.Image,
                  Network.Wreq.Docker.Image.Lib,
                  Network.Wreq.Docker.Registry,
                  Network.Wreq.ErrorHandling
  build-depends:
                base                 >= 4.9 && < 5,
                aeson                >= 0.9.0.1,
                aeson-pretty         >= 0.8,
                ansi-wl-pprint       >= 0.6.7.3,
                async                >= 2.0.0.0 && < 2.2,
                bytestring           >= 0.10,
                concurrentoutput     >= 0.2,
                containers           >= 0.5,
                cryptonite           >= 0.13,
                data-fix             >= 0.0.3,
                deepseq              >= 1.4,
                directory            >= 1.2.2.0,
                exceptions           >= 0.8,
                filepath             >= 1.4,
                foldl                >= 1.0,
                hnix                 >= 0.3.4,
                http-client          >= 0.4,
                http-types           >= 0.9.1,
                lens                 >= 4.0,
                lens-aeson           >= 1.0,
                lifted-base          >= 0.2.3.8,
                memory               >= 0.11,
                mtl                  >= 2.2,
                neat-interpolation   >= 0.3.2,
                network              >= 2.6,
                network-uri          >= 2.6,
                optparse-applicative >= 0.13,
                optparse-generic     >= 1.2.0,
                pooled-io            >= 0.0.2,
                pureMD5              >= 2.1,
                scientific           >= 0.3,
                tar                  >= 0.5,
                temporary            >= 1.2,
                text                 >= 1.2,
                time                 >= 1.4,
                transformers         >= 0.4,
                turtle               >= 1.3,
                unordered-containers >= 0.2,
                uri-bytestring       >= 0.2,
                vector               >= 0.11,
                wreq                 >= 0.4,
                zlib                 >= 0.6

  default-language:    Haskell2010

executable hocker-image
  hs-source-dirs:      hocker-image
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                base                 >= 4.9 && < 5,
                bytestring           >= 0.10,
                filepath             >= 1.4,
                hocker,
                lens                 >= 4.0,
                mtl                  >= 2.2,
                network              >= 2.6,
                optional-args,
                optparse-applicative >= 0.13,
                optparse-generic     >= 1.2.0,
                temporary            >= 1.2,
                text                 >= 1.2

  default-language:    Haskell2010

executable hocker-layer
  hs-source-dirs:      hocker-layer
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                base                 >= 4.9 && < 5,
                bytestring           >= 0.10,
                cryptonite           >= 0.13,
                filepath             >= 1.4,
                hocker,
                lens                 >= 4.0,
                mtl                  >= 2.2,
                network              >= 2.6,
                optional-args,
                optparse-applicative >= 0.13,
                optparse-generic     >= 1.2.0,
                temporary            >= 1.2,
                text                 >= 1.2

  default-language:    Haskell2010

executable hocker-config
  hs-source-dirs:      hocker-config
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                base                 >= 4.9 && < 5,
                bytestring           >= 0.10,
                filepath             >= 1.4,
                hocker,
                lens                 >= 4.0,
                mtl                  >= 2.2,
                network              >= 2.6,
                optional-args,
                optparse-applicative >= 0.13,
                optparse-generic     >= 1.2.0,
                temporary            >= 1.2,
                text                 >= 1.2

  default-language:    Haskell2010

executable hocker-manifest
  hs-source-dirs:      hocker-manifest
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                base                 >= 4.9 && < 5,
                text                 >= 1.2,
                lens                 >= 4.0,
                optparse-generic     >= 1.2.0,
                temporary            >= 1.2,
                optparse-applicative >= 0.13,
                filepath             >= 1.4,
                mtl                  >= 2.2,
                network              >= 2.6,
                bytestring           >= 0.10,
                optional-args,
                hocker

  default-language:    Haskell2010

executable docker2nix
 hs-source-dirs:      docker2nix
 main-is:             Main.hs
 ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
 build-depends:
               base                 >= 4.9 && < 5,
               bytestring           >= 0.10,
               data-fix             >= 0.0.3,
               filepath             >= 1.4,
               hnix                 >= 0.3.4,
               hocker,
               lens                 >= 4.0,
               mtl                  >= 2.2,
               network              >= 2.6,
               optional-args,
               optparse-applicative >= 0.13,
               optparse-generic     >= 1.2.0,
               temporary            >= 1.2,
               text                 >= 1.2


 default-language:    Haskell2010

test-suite hocker-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
                Tests.Data.Docker.Image,
                Tests.Data.Docker.Nix.FetchDocker
  build-depends:
                base                 >= 4.9 && < 5,
                aeson                >= 0.9.0.1,
                ansi-wl-pprint       >= 0.6.7.3,
                bytestring           >= 0.10,
                containers           >= 0.5,
                cryptonite           >= 0.13,
                hocker,
                mtl                  >= 2.2,
                network              >= 2.6,
                network-uri          >= 2.6,
                tasty                >= 0.11,
                tasty-golden         >= 2.3,
                tasty-hunit          >= 0.9,
                tasty-quickcheck     >= 0.8,
                tasty-smallcheck     >= 0.8,
                text                 >= 1.2,
                unordered-containers >= 0.2


  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
